Bug 1437036 - Stop the reftest harness from waiting for MozAfterPaint during infinite/superlong animations. r?hiro
These tests rely on an optimization within Gecko where it stops firing
MozAfterPaint events if there was no visible change to the generated
layers. This allows the reftest harness to exit the
waiting-for-MozAfterPaint loop and proceed with the test. However, with
webrender, this optimization does not exist and so the loop never exits.
In order to solve this problem, this patch adds an explicit mechanism to
exit the loop by means of a class attribute on the root element of the
test page.

MozReview-Commit-ID: 17ta5kLPDr9

--- a/layout/reftests/transform-3d/animate-preserve3d-child.html
+++ b/layout/reftests/transform-3d/animate-preserve3d-child.html
@@ -46,11 +46,14 @@ body { padding: 50px }
 document.getElementById("parent").addEventListener("animationiteration", IterationListener);
 
 function IterationListener(event) {
-  setTimeout(RemoveReftestWait, 0);
+  window.addEventListener("MozAfterPaint", () => {
+    requestAnimationFrame(RemoveReftestWait);
+  }, { once: true });
 }
 
 function RemoveReftestWait() {
   document.documentElement.classList.remove("reftest-wait");
+  document.documentElement.classList.add("reftest-ignore-pending-paints");
 }
 
 </script>
